# prex_core_challenge

./: .gitignore  Cargo.toml  README.md  prex_core_challenge.postman_collection.json  prex_core_challenge.service
.github/workflows/: rust.yaml
api/src/: main.rs
api/src/domain/model/dto/: create_client.rs  debit_transaction.rs  mod.rs
api/src/domain/model/value/: client_id.rs  document.rs
api/src/domain/port/inbound/: client_balance_service.rs
api/src/infrastructure/inbound/http/: error.rs
api/src/infrastructure/inbound/http/dto/: store_balances.rs
api/src/infrastructure/outbound/: mod.rs
app/logs/: test_log_endpoints.sh
app/src/domain/model/value/: client_name.rs
app/src/domain/port/outbound/: mod.rs
app/src/infrastructure/inbound/http/: client_balance_handlers.rs
app/src/infrastructure/inbound/http/dto/: new_credit_transaction.rs  new_debit_transaction.rs
app/src/infrastructure/outbound/: in_memory.rs
src/: main.rs
src/application/: client_balance_service.rs  mod.rs
src/domain/model/: error.rs  mod.rs
src/domain/model/dto/: create_client.rs  credit_transaction.rs  debit_transaction.rs  get_balance.rs
src/domain/model/entity/: balance.rs  client.rs  mod.rs
src/domain/model/value/: birth_date.rs  client_id.rs  client_name.rs  country.rs  document.rs  mod.rs
src/domain/port/outbound/: balance_exporter.rs  client_balance_repository.rs
src/infrastructure/inbound/http/: logger.rs  logger_handlers.rs  mod.rs  server.rs  ws_logger.rs
src/infrastructure/inbound/http/dto/: create_client.rs  get_client_balance.rs  mod.rs
src/infrastructure/outbound/: file_exporter.rs  in_memory.rs
