[package]
name = "prex_core_challenge"
version = "0.1.0"
authors = ["Federico Jose Pacheco <ffedepach@gmail.com>"]
edition = "2024"

[dependencies]
# HTTP
actix-web = "4.11.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Async
tokio = { version = "1.45.1", features = ["full"] }

# Error handling
anyhow = "1.0.96"
thiserror = "2.0.12"

# UUID
uuid = { version = "1.17", features = ["v4"] }

# Date and time
chrono = { version = "0.4.41", features = ["serde"] }

# Derive more
derive_more = "2.0.1"

# Decimal
decimal = "2.1.0"
rust_decimal = { version = "1.37.2", features = ["macros", "serde"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Mocking
[dev-dependencies]
mockall = "0.13.1"
